--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-scipy==1.10.0
-dlib==19.17.0
-imutils==0.5.2
-numpy==1.22.0
-opencv-python==4.2.0.32
-PyQt5==5.12.3
-pyqtgraph==0.10.0
+cmake
+scipy~=1.10
+dlib~=19.17
+imutils~=0.5
+numpy~=1.22
+opencv-python~=4.2.0
+PyQt5~=5.12
+pyqtgraph~=0.10
+jupyter~=1.1
+matplotlib~=3.7
+pandas~=2.0
